about content update

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,12 +42,12 @@ a {
   padding: 0 !important;
 }
 .sideSubmenu{
-  margin-right: 20px;
+  margin-right: 20px !important;
   background-color: #ffc7d6;
-  margin-top: 40px;
-  padding: 0;
+  margin-top: 40px !important;
+  padding: 0 !important;
   color: #fff;
- margin-left: 20px;
+ margin-left: 20px !important;
 }
 .menulist{
   height: 500px;
