--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,8 +6,8 @@
   --button-primary-hover: #383838;
   --button-secondary-hover: #f2f2f2;
 
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
+  display: Grid;
+  Grid-template-rows: 20px 1fr 20px;
   align-items: center;
   justify-items: center;
   min-height: 100svh;
@@ -31,7 +31,7 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
-  grid-row-start: 2;
+  Grid-row-start: 2;
 }
 
 .main ol {
@@ -90,7 +90,7 @@ a.secondary {
 }
 
 .footer {
-  grid-row-start: 3;
+  Grid-row-start: 3;
   display: flex;
   gap: 24px;
 }
