--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,5 +55,37 @@ a {
 
 }
 
+.navbar .menu-item {
+  position: relative; 
+}
+
+.navbar .menu-item .submenu {
+ 
+  position: absolute; 
+  top: 100%; 
+  left: 0;
+  padding: 10px 0;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1500; 
+  width: 400px;
+  border-radius: 10px;
+}
+
+/* .navbar .menu-item:hover .submenu {
+  display: block; 
+} */
+
+.submenulist {
+  color: #000;
+  padding: 10px;
+}
+
+.navbar a {
+  text-decoration: none; 
+}
+
+
+
 
 
