--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,7 +43,7 @@ a {
 }
 .sideSubmenu{
   margin-right: 20px !important;
-  background-color: #ffc7d6;
+  background-color: #ffdae2;
   margin-top: 40px !important;
   padding: 0 !important;
   color: #fff;
