--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,11 +43,14 @@ a {
 }
 .sideSubmenu{
   margin-right: 20px !important;
-  background-color: #ffdae2;
+  background-color: #fff;
   margin-top: 40px !important;
   padding: 0 !important;
   color: #fff;
  margin-left: 20px !important;
+ border: 1px solid #007cb0;
+ border-bottom-right-radius: 10px;
+ border-bottom-left-radius: 10px;
 }
 .menulist{
   height: 500px;
@@ -69,9 +72,8 @@ a {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   z-index: 1500; 
   width: 400px;
-  border-radius: 10px;
-}
 
+}
 /* .navbar .menu-item:hover .submenu {
   display: block; 
 } */
