--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@ body {
     max-width: 100vw;
     overflow-x: hidden;
     padding: 0 !important;
+     font-family: "Open Sans, sans-serif"
   
 }
 
