--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,7 +63,8 @@ a {
   position: absolute;
   top: 100%;
   left: 0;
-  padding: 10px 0;
+  padding: 5px;
+  border-radius:5px ;
   background-color: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   z-index: 1500;
